update to eclipse 2023-12