@@ -10,6 +10,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.swing.Icon;
@@ -113,7 +114,7 @@ class LinePropertiesPanelVisualTest
         List<LPP_TADetail>  detailObjects   =
             Stream.of( allFiles )
                 .map( f -> getDetail( f ) )
-                .toList();
+                .collect( Collectors.toList() );
         return detailObjects;
     }
     
