@@ -74,7 +74,7 @@ class CommandReaderTest
             Stream.of( Command.END, Command.EXIT, Command.STEP )
                 .map( c -> getExpResult( c, "", true ) )
                 .map( p -> p.getCommandString() + " " + p.getArgString() )
-                .toList();
+                .collect( Collectors.toList() );
         ioTest( input, this::testSimpleCommandWithoutArg );
     }
     
@@ -100,7 +100,7 @@ class CommandReaderTest
             Stream.of( Command.END, Command.EXIT, Command.STEP )
                 .map( c -> getExpResult( c, getArg(), true ) )
                 .map( p -> p.getCommandString() + " " + p.getArgString() )
-                .toList();
+                .collect( Collectors.toList() );
         ioTest( input, this::testSimpleCommandWithArg );
     }
     
@@ -130,7 +130,7 @@ class CommandReaderTest
         List<String>    input   = 
             expResults.stream()
                 .map( p -> p.getCommandString() + " " + p.getArgString() )
-                .toList();
+                .collect( Collectors.toList() );
         ioTest( input, this::testShortcutsArg );
     }
     
@@ -163,7 +163,7 @@ class CommandReaderTest
                     "   " + p.getArgString() +
                     "   "
                 )
-                .toList();
+                .collect( Collectors.toList() );
         ioTest( input, this::testLeadingTrailingSpaces );
     }
     
@@ -194,7 +194,7 @@ class CommandReaderTest
                 "#",
                 "     #     "
                 )
-                .toList();
+            .collect( Collectors.toList() );
         ioTest( input, this::testEmptyLinesAndComments );
     }
     
@@ -240,7 +240,7 @@ class CommandReaderTest
                 .flatMap( s ->
                     Stream.of( s, "", "#", "  #  ", "$BadCommand" )
                 )
-                .toList();
+                .collect( Collectors.toList() );
         ioTest( input, this::testMixAndMatch );
     }
     
@@ -279,7 +279,7 @@ class CommandReaderTest
                 .flatMap( s ->
                     Stream.of( s, "", "#", "  #  " )
                 )
-                .toList();
+                .collect( Collectors.toList() );
         ioTest( input, this::testStream );
     }
 
